//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package tests.v1;

import "google/protobuf/timestamp.proto";

// This is an object type used in unit tests.
message Object {
  // Unique identifier of the object.
  string id = 1;

  // Metadata of the object.
  Metadata metadata = 2;

  // Miscellanea fields used in tests.
  bool my_bool = 3;
  int32 my_int32 = 4;
  int64 my_int64 = 5;
  string my_string = 6;
  float my_float = 7;
  double my_double = 8;
  google.protobuf.Timestamp my_timestamp = 9;
  bytes my_bytes = 10;
  Object my_msg = 11;
  repeated Object my_repeated = 12;
  map<string, Object> my_map = 13;
  string ignore = 14;
  repeated string my_string_list = 15;
  repeated bool my_bool_list = 16;
  repeated int32 my_int32_list = 17;
  repeated int64 my_int64_list = 18;
  map<string, string> my_string_map = 19;
  map<string, bool> my_bool_map = 20;
  map<string, int32> my_int32_map = 21;
  map<string, int64> my_int64_map = 22;

  // Spec and status:
  Spec spec = 23;
  Status status = 24;
}

message Metadata {
  google.protobuf.Timestamp creation_timestamp = 1;
  google.protobuf.Timestamp deletion_timestamp = 2;
  repeated string finalizers = 3;
  repeated string owners = 4;
}

message Spec {
  bool spec_bool = 1;
  int32 spec_int32 = 2;
  int64 spec_int64 = 3;
  string spec_string = 4;
  float spec_float = 5;
  double spec_double = 6;
  bytes spec_bytes = 7;
  google.protobuf.Timestamp spec_timestamp = 8;
  string ignore = 9;
  Object spec_msg = 10;
  repeated Object spec_list = 11;
  map<string, Object> spec_map = 12;
}

message Status {
  bool status_bool = 1;
  int32 status_int32 = 2;
  int64 status_int64 = 3;
  string status_string = 4;
  float status_float = 5;
  double status_double = 6;
  bytes status_bytes = 7;
  google.protobuf.Timestamp status_timestamp = 8;
}
